feat: add visible debug logging to CEP panel
- Debug log section at bottom of CEP panel
- Shows initialization steps and errors
- No need for developer tools to see what's happening

--- a/cep/index.html
+++ b/cep/index.html
@@ -197,6 +197,12 @@
     <script src="js/custom-anchor.js"></script>
     <script src="js/grid.js"></script>
     <script src="js/main.js"></script>
+
+    <!-- Debug Output -->
+    <div class="section" id="debug-section" style="max-height:100px;overflow-y:auto;margin-top:10px;">
+        <div class="section-title" style="font-size:10px;">Debug Log</div>
+        <div id="debug-output" style="font-size:9px;color:#888;font-family:monospace;">Loading...</div>
+    </div>
 </body>
 
 </html>
