--- a/cep/index.html
+++ b/cep/index.html
@@ -191,7 +191,7 @@
         </div>
     </div>
 
-    <script src="lib/CSInterface.js"></script>
+    <script src="js/CSInterface.js"></script>
     <script src="js/i18n.js"></script>
     <script src="js/settings.js"></script>
     <script src="js/custom-anchor.js"></script>
