feat: UI refinements for icons, grid, and labels
1. Settings icon: 20% larger, 20% smaller center, 20% thicker teeth
2. Mask icon: 10% taller, 10% larger circle
3. Transparency labels: Grid BG → Mark, Cell BG → Cell
4. Grid marks: closer to center, longer corners, shorter edges
5. Grid: remove cell spacing, add gray separator lines
6. Hover glow: improved responsiveness

--- a/cep/index.html
+++ b/cep/index.html
@@ -159,12 +159,12 @@
     <div class="section">
         <div class="section-title" data-i18n="transparency">Transparency</div>
         <div class="slider-row">
-            <span class="slider-label" data-i18n="gridBg">Grid BG:</span>
+            <span class="slider-label" data-i18n="gridOpacity">Mark:</span>
             <input type="range" id="grid-opacity" class="opacity-slider" min="0" max="100" value="75">
             <span class="slider-value" id="grid-opacity-value">75%</span>
         </div>
         <div class="slider-row">
-            <span class="slider-label" data-i18n="cellBg">Cell BG:</span>
+            <span class="slider-label" data-i18n="cellOpacity">Cell:</span>
             <input type="range" id="cell-opacity" class="opacity-slider" min="0" max="100" value="50">
             <span class="slider-value" id="cell-opacity-value">50%</span>
         </div>
